# ghanaiem_agency

./: .gitignore  Procfile  Readme.md  manage.py  pyproject.toml  render.yaml  requirements.txt  test.conf
apps/authentication/: forms.py  views.py
apps/home/: urls.py  views.py
apps/templates/accounts/: login.html  register.html
apps/templates/home/: annonce.html  annonce_detail.html  annonces.html  create_annonce.html  create_endroit.html  create_rubrique.html  edit_annonce.html  edit_endroit.html  edit_rubrique.html  endroit.html  endroits.html  icons.html  index.html  infos.html  map.html  profile.html  reservations.html  rubrique.html  rubriques.html  tables.html
apps/templates/includes/: navigation.html  scripts.html  sidenav.html
apps/templates/layouts/: base-fullscreen.html  base.html
ghanaiem_agency/: asgi.py  settings.py  storage_backends.py  urls.py  wsgi.py
main/: admin.py  forms.py  models.py  views.py
main/migrations/: 0001_initial.py  0002_auto_20211209_2213.py  0003_auto_20211211_0017.py  0004_main_video_pricipal.py  0005_rename_video_pricipal_main_video_principal.py  0006_auto_20211218_1203.py  0007_annonce_post.py  0008_auto_20211228_1813.py
main/templates/: annonces_by_category_list.html  base.html  base2.html  index.html  privacy.html  reservation.html  standard_base.html  terms.html
main/templates/components/: caroussel.html  caroussel2.html  caroussel3.html  footer.html  glider.html  navbar.html  navbar2.html
static/assets/js/: scripts2.js
static/assets2/css/: argon.css.map
static/css/: styles.css
static/js/: scripts.js
(+11 files in other folders)
