[tool.poetry]
name = "agency-dependencies"
version = "0.1.0"
description = "Tourism and travel services"
authors = ["aimene <bahri.aimen48@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.4.1"
boto3 = "1.20.32"
botocore = "1.23.32"
dj-database-url = "0.5.0"
django = "3.2.9"
django-appconf = "1.0.5"
django-compressor = "2.4.1"
django-crispy-forms = "1.13.0"
django-heroku = "0.3.1"
django-libsass = "0.9"
django-storages = "1.12.3"
gunicorn = "20.1.0"
jmespath = "0.10.0"
libsass = "0.21.0"
pillow = "8.4.0"
psycopg2 = "2.9.2"
psycopg2-binary = "2.9.3"
python-dateutil = "2.8.2"
pytz = "2021.3"
rcssmin = "1.0.6"
rjsmin = "1.1.0"
s3transfer = "0.5.0"
six = "1.16.0"
sqlparse = "0.4.2"
urllib3 = "1.26.8"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
